# cxxforever

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.cmake  README.md
src/: Makefile  client.cpp  client.hpp  config.hpp  error.cpp  error.hpp  libmain.cpp  libtwilio++.hpp  main.cpp  message.hpp  net.cpp  net.hpp  plexer.cpp  plexer.hpp  sipclient.hpp
test/: net.cpp  test_gtest.cpp  test_kqueue.cpp
